--- a/form.html
+++ b/form.html
@@ -1,13 +1,13 @@
 <div class="form">
     <div class="form_logo"></br><img src="2_Flat_logo_on_transparent_213x75.png" alt=""/><div class="text"><span>+7(812)000-00-00</span>
     </br>
-    <span>Ежедневно с 9:00 до 21:00</span></div>
+    <span>Р•Р¶РµРґРЅРµРІРЅРѕ СЃ 9:00 РґРѕ 21:00</span></div>
     </div>
-    <div class="form_content"><p>Расчет и одобрение ипотечного кредита зависит от многих факторов, таких, как:
-    условия ипотечной программы, возраст заемщика, платежеспособность и многое другое.</p>
+    <div class="form_content"><p>Р Р°СЃС‡РµС‚ Рё РѕРґРѕР±СЂРµРЅРёРµ РёРїРѕС‚РµС‡РЅРѕРіРѕ РєСЂРµРґРёС‚Р° Р·Р°РІРёСЃРёС‚ РѕС‚ РјРЅРѕРіРёС… С„Р°РєС‚РѕСЂРѕРІ, С‚Р°РєРёС…, РєР°Рє:
+    СѓСЃР»РѕРІРёСЏ РёРїРѕС‚РµС‡РЅРѕР№ РїСЂРѕРіСЂР°РјРјС‹, РІРѕР·СЂР°СЃС‚ Р·Р°РµРјС‰РёРєР°, РїР»Р°С‚РµР¶РµСЃРїРѕСЃРѕР±РЅРѕСЃС‚СЊ Рё РјРЅРѕРіРѕРµ РґСЂСѓРіРѕРµ.</p>
 <form method="get">
     <input type="text" id="phone" class="form_1" name="phone"/>
-    <input type="submit" id="button" class="form_1" value="Заказать звонок"/>
+    <input type="submit" id="button" class="form_1" value="Р—Р°РєР°Р·Р°С‚СЊ Р·РІРѕРЅРѕРє"/>
 </form>
     </div>
 </div>
