--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="windows-1251">
+    <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="styles.css"/>
     <link rel="stylesheet" type="text/css" href="http://artek.moscow/js/magnificpopup/magnific-popup.css" />
@@ -12,7 +12,7 @@
 </head>
 <body style="height: 1000px">
 <div>
-   <p><button class="fancy" href="form.html">Заказать звонок</button></p>
+   <p><button class="fancy" href="form.html">Р—Р°РєР°Р·Р°С‚СЊ Р·РІРѕРЅРѕРє</button></p>
 </div>
 </body>
 </html>
